# docassemble-MATCSmallClaims

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  small_claims_next_steps_nsd.docx
.github/workflows/: run_kiln_tests.yml
docassemble/MATCSmallClaims/data/questions/: efiling.yml  small_claims.yml
docassemble/MATCSmallClaims/data/sources/: small_claims.feature
docassemble/MATCSmallClaims/data/static/: bootstrap.css  bootstrap.min.css  styles.css  variables.scss
docassemble/MATCSmallClaims/data/templates/: small_claims_next_steps.docx
handoff/: transfer_memo_2025.md
