[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.MATCSmallClaims"
version = "1.0"
description = "Massachusetts small claims complaint"
readme = "README.md"
authors = [
    { name = "Suffolk Legal Innovation & Technology Lab (LIT Lab)", email = "litlab@suffolk.edu" },
]
dependencies = [
    "docassemble.AssemblyLine @ git+https://github.com/SuffolkLITLab/docassemble-AssemblyLine.git@main",
]

[project.urls]
Homepage = "https://courtformsonline.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
